Fixed layout shifting upon input field focus border

--- a/css/styles.css
+++ b/css/styles.css
@@ -330,7 +330,7 @@ main p {
   justify-content: center;
 }
 .input {
-  border: none;
+  border: 2px solid transparent;
   border-radius: 0.5rem;
   color: var(--text-color);
   font-size: 1rem;
